CPP_CORE/include/creative_core_api.h

typedef void* CreativeHistoryCursorHandle;
typedef void* CreativeHistoryPayloadHandle;
typedef struct CsImageView {
    const uint8_t* pixels;
    int width;
    int height;
    int stride;
    int image_format;
} CsImageView;
typedef struct CsHistoryImagePair {
    CsImageView before;
    CsImageView after;
    int has_before;
    int has_after;
} CsHistoryImagePair;
typedef struct CsHistoryStoreWrite {
    CreativeTileStoreHandle store;
    int payload_index;
    int tile_x;
    int tile_y;
} CsHistoryStoreWrite;
CreativeHistoryCursorHandle cs_history_cursor_create(int maximum_steps);
void cs_history_cursor_destroy(CreativeHistoryCursorHandle handle);
void cs_history_cursor_reset(CreativeHistoryCursorHandle handle);
int cs_history_cursor_begin_transaction(CreativeHistoryCursorHandle handle,
                                        int dirty_only, int selection_only,
                                        int structure_only);
int cs_history_cursor_commit_transaction(CreativeHistoryCursorHandle handle);
int cs_history_cursor_cancel_transaction(CreativeHistoryCursorHandle handle);
int cs_history_cursor_transaction_open(CreativeHistoryCursorHandle handle);
int cs_history_cursor_transaction_mode(CreativeHistoryCursorHandle handle);
int cs_history_cursor_append(CreativeHistoryCursorHandle handle,
                             int* truncated_forward, int* discarded_oldest);
int cs_history_cursor_append_state(CreativeHistoryCursorHandle handle,
                                   const uint8_t* before, uint32_t before_size,
                                   const uint8_t* after, uint32_t after_size,
                                   int* truncated_forward, int* discarded_oldest);
uint32_t cs_history_cursor_state_size(CreativeHistoryCursorHandle handle,
                                      int index, int side);
int cs_history_cursor_copy_state(CreativeHistoryCursorHandle handle, int index,
                                 int side, uint8_t* output, uint32_t capacity);
int cs_history_cursor_discard_oldest(CreativeHistoryCursorHandle handle, int count);
int cs_history_cursor_set_maximum(CreativeHistoryCursorHandle handle, int maximum_steps);
int cs_history_cursor_undo(CreativeHistoryCursorHandle handle);
int cs_history_cursor_redo(CreativeHistoryCursorHandle handle);
void cs_history_cursor_synchronize(CreativeHistoryCursorHandle handle,
                                   int step_count, int index);
int cs_history_validate_layer_state(const uint8_t* payload, uint32_t payload_size,
                                    int document_width, int document_height);
int cs_history_cursor_count(CreativeHistoryCursorHandle handle);
int cs_history_cursor_index(CreativeHistoryCursorHandle handle);
int cs_history_cursor_maximum(CreativeHistoryCursorHandle handle);
CreativeHistoryPayloadHandle cs_history_payload_create(void);
void cs_history_payload_destroy(CreativeHistoryPayloadHandle handle);
int cs_history_payload_append(CreativeHistoryPayloadHandle handle,
                              const CsImageView* before,
                              const CsImageView* after);
int cs_history_payload_append_many(CreativeHistoryPayloadHandle handle,
                                   const CsHistoryImagePair* items, int count,
                                   int* payload_indices, int output_capacity);
int cs_history_payload_tile_info(CreativeHistoryPayloadHandle handle, int index,
                                 int side, int* present, int* width,
                                 int* height, int* image_format);
int cs_history_payload_copy_tile(CreativeHistoryPayloadHandle handle, int index,
                                 int side, uint8_t* output, int width,
                                 int height, int stride, int image_format);
int cs_history_payload_count(CreativeHistoryPayloadHandle handle);
int64_t cs_history_payload_allocated_bytes(CreativeHistoryPayloadHandle handle);
void cs_history_payload_clear(CreativeHistoryPayloadHandle handle);
int cs_history_payload_apply_to_tile_stores(CreativeHistoryPayloadHandle payload,
                                            const CsHistoryStoreWrite* writes,
                                            int count, int side);
int cs_lz4_available(void);
int cs_lz4_compress_bound(int input_size);
int cs_lz4_compress(const uint8_t* input, int input_size,
                    uint8_t* output, int output_capacity, int* output_size);
int cs_lz4_decompress(const uint8_t* input, int input_size,
                      uint8_t* output, int expected_size, int* output_size);
int cs_cslz_max_encoded_size(int raw_size);
int cs_cslz_encode(const uint8_t* rgba, int width, int height, int stride,
                   uint8_t* output, int output_capacity, int* output_size);
int cs_cslz_decode_info(const uint8_t* encoded, int encoded_size,
                        int* width, int* height, int* stride,
                        int* raw_size, int* compressed);
int cs_cslz_decode(const uint8_t* encoded, int encoded_size,
                   uint8_t* output, int output_capacity);