CORE/native_bridge.py


def _configure_history_cursor(library) -> bool:
    names = (
        "cs_history_cursor_create", "cs_history_cursor_destroy",
        "cs_history_cursor_reset", "cs_history_cursor_begin_transaction",
        "cs_history_cursor_commit_transaction", "cs_history_cursor_cancel_transaction",
        "cs_history_cursor_transaction_open", "cs_history_cursor_transaction_mode",
        "cs_history_cursor_append",
        "cs_history_cursor_append_state", "cs_history_cursor_state_size",
        "cs_history_cursor_copy_state",
        "cs_history_cursor_discard_oldest", "cs_history_cursor_set_maximum",
        "cs_history_cursor_undo", "cs_history_cursor_redo",
        "cs_history_cursor_synchronize", "cs_history_cursor_count",
        "cs_history_cursor_index", "cs_history_cursor_maximum",
        "cs_history_validate_layer_state",
    )
    if any(not hasattr(library, name) for name in names):
        return False
    handle = ctypes.c_void_p
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    library.cs_history_cursor_create.argtypes = [ctypes.c_int]
    library.cs_history_cursor_create.restype = handle
    library.cs_history_cursor_destroy.argtypes = [handle]
    library.cs_history_cursor_destroy.restype = None
    library.cs_history_cursor_reset.argtypes = [handle]
    library.cs_history_cursor_reset.restype = None
    library.cs_history_cursor_begin_transaction.argtypes = [handle,
        ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_history_cursor_begin_transaction.restype = ctypes.c_int
    for name in ("cs_history_cursor_commit_transaction",
                 "cs_history_cursor_cancel_transaction",
                 "cs_history_cursor_transaction_open",
                 "cs_history_cursor_transaction_mode"):
        function = getattr(library, name)
        function.argtypes = [handle]
        function.restype = ctypes.c_int
    library.cs_history_cursor_append.argtypes = [handle,
        ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_int)]
    library.cs_history_cursor_append.restype = ctypes.c_int
    library.cs_history_cursor_append_state.argtypes = [
        handle, byte_ptr, ctypes.c_uint32, byte_ptr, ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_int),
    ]
    library.cs_history_cursor_append_state.restype = ctypes.c_int
    library.cs_history_cursor_state_size.argtypes = [handle, ctypes.c_int, ctypes.c_int]
    library.cs_history_cursor_state_size.restype = ctypes.c_uint32
    library.cs_history_cursor_copy_state.argtypes = [
        handle, ctypes.c_int, ctypes.c_int, byte_ptr, ctypes.c_uint32,
    ]
    library.cs_history_cursor_copy_state.restype = ctypes.c_int
    library.cs_history_cursor_discard_oldest.argtypes = [handle, ctypes.c_int]
    library.cs_history_cursor_discard_oldest.restype = ctypes.c_int
    library.cs_history_cursor_set_maximum.argtypes = [handle, ctypes.c_int]
    library.cs_history_cursor_set_maximum.restype = ctypes.c_int
    library.cs_history_cursor_undo.argtypes = [handle]
    library.cs_history_cursor_undo.restype = ctypes.c_int
    library.cs_history_cursor_redo.argtypes = [handle]
    library.cs_history_cursor_redo.restype = ctypes.c_int
    library.cs_history_cursor_synchronize.argtypes = [handle, ctypes.c_int, ctypes.c_int]
    library.cs_history_cursor_synchronize.restype = None
    library.cs_history_validate_layer_state.argtypes = [
        byte_ptr, ctypes.c_uint32, ctypes.c_int, ctypes.c_int,
    ]
    library.cs_history_validate_layer_state.restype = ctypes.c_int
    for name in ("cs_history_cursor_count", "cs_history_cursor_index",
                 "cs_history_cursor_maximum"):
        function = getattr(library, name)
        function.argtypes = [handle]
        function.restype = ctypes.c_int
    return True


def validate_history_layer_state(payload: bytes, width: int, height: int) -> bool | None:
    """Validate a structural history snapshot in CreativeCore."""
    library = load_creative_core()
    if library is None or not _configure_history_cursor(library):
        return None
    data = bytes(payload)
    if not data or len(data) > 16 * 1024 * 1024:
        return False
    buffer = ctypes.create_string_buffer(data, len(data))
    return bool(library.cs_history_validate_layer_state(
        ctypes.cast(buffer, ctypes.POINTER(ctypes.c_uint8)), len(data),
        int(width), int(height)))


def _configure_history_payload(library) -> bool:
    names = (
        "cs_history_payload_create", "cs_history_payload_destroy",
        "cs_history_payload_append", "cs_history_payload_append_many",
        "cs_history_payload_tile_info",
        "cs_history_payload_copy_tile", "cs_history_payload_count",
        "cs_history_payload_allocated_bytes", "cs_history_payload_clear",
        "cs_history_payload_apply_to_tile_stores",
    )
    if any(not hasattr(library, name) for name in names):
        return False
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    class ImageView(ctypes.Structure):
        _fields_ = [("pixels", byte_ptr), ("width", ctypes.c_int),
                    ("height", ctypes.c_int), ("stride", ctypes.c_int),
                    ("image_format", ctypes.c_int)]
    class ImagePair(ctypes.Structure):
        _fields_ = [("before", ImageView), ("after", ImageView),
                    ("has_before", ctypes.c_int), ("has_after", ctypes.c_int)]
    library._cs_image_view_type = ImageView
    library._cs_history_image_pair_type = ImagePair
    class HistoryStoreWrite(ctypes.Structure):
        _fields_ = [("store", ctypes.c_void_p), ("payload_index", ctypes.c_int),
                    ("tile_x", ctypes.c_int), ("tile_y", ctypes.c_int)]
    library._cs_history_store_write_type = HistoryStoreWrite
    handle = ctypes.c_void_p
    library.cs_history_payload_create.argtypes = []
    library.cs_history_payload_create.restype = handle
    library.cs_history_payload_destroy.argtypes = [handle]
    library.cs_history_payload_destroy.restype = None
    library.cs_history_payload_append.argtypes = [handle,
        ctypes.POINTER(ImageView), ctypes.POINTER(ImageView)]
    library.cs_history_payload_append.restype = ctypes.c_int
    library.cs_history_payload_append_many.argtypes = [handle,
        ctypes.POINTER(ImagePair), ctypes.c_int, ctypes.POINTER(ctypes.c_int),
        ctypes.c_int]
    library.cs_history_payload_append_many.restype = ctypes.c_int
    library.cs_history_payload_tile_info.argtypes = [handle, ctypes.c_int,
        ctypes.c_int, *([ctypes.POINTER(ctypes.c_int)] * 4)]
    library.cs_history_payload_tile_info.restype = ctypes.c_int
    library.cs_history_payload_copy_tile.argtypes = [handle, ctypes.c_int,
        ctypes.c_int, byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        ctypes.c_int]
    library.cs_history_payload_copy_tile.restype = ctypes.c_int
    library.cs_history_payload_count.argtypes = [handle]
    library.cs_history_payload_count.restype = ctypes.c_int
    library.cs_history_payload_allocated_bytes.argtypes = [handle]
    library.cs_history_payload_allocated_bytes.restype = ctypes.c_int64
    library.cs_history_payload_clear.argtypes = [handle]
    library.cs_history_payload_clear.restype = None
    library.cs_history_payload_apply_to_tile_stores.argtypes = [handle,
        ctypes.POINTER(HistoryStoreWrite), ctypes.c_int, ctypes.c_int]
    library.cs_history_payload_apply_to_tile_stores.restype = ctypes.c_int
    return True


def _configure_lz4(library) -> bool:
    names = ("cs_lz4_available", "cs_lz4_compress_bound",
             "cs_lz4_compress", "cs_lz4_decompress", "cs_cslz_max_encoded_size",
             "cs_cslz_encode", "cs_cslz_decode_info", "cs_cslz_decode")
    if any(not hasattr(library, name) for name in names):
        return False
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    library.cs_lz4_available.argtypes = []
    library.cs_lz4_available.restype = ctypes.c_int
    library.cs_lz4_compress_bound.argtypes = [ctypes.c_int]
    library.cs_lz4_compress_bound.restype = ctypes.c_int
    library.cs_lz4_compress.argtypes = [byte_ptr, ctypes.c_int, byte_ptr,
        ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
    library.cs_lz4_compress.restype = ctypes.c_int
    library.cs_lz4_decompress.argtypes = [byte_ptr, ctypes.c_int, byte_ptr,
        ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
    library.cs_lz4_decompress.restype = ctypes.c_int
    library.cs_cslz_max_encoded_size.argtypes = [ctypes.c_int]
    library.cs_cslz_max_encoded_size.restype = ctypes.c_int
    library.cs_cslz_encode.argtypes = [byte_ptr, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, byte_ptr, ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
    library.cs_cslz_encode.restype = ctypes.c_int
    library.cs_cslz_decode_info.argtypes = [byte_ptr, ctypes.c_int,
        *([ctypes.POINTER(ctypes.c_int)] * 5)]
    library.cs_cslz_decode_info.restype = ctypes.c_int
    library.cs_cslz_decode.argtypes = [byte_ptr, ctypes.c_int, byte_ptr,
        ctypes.c_int]
    library.cs_cslz_decode.restype = ctypes.c_int
    return True

